asm_tests/other_testfiles/invalid_files/error2.s
.name "MORO"

hihii:
live :hihii
